--- a/readings.html
+++ b/readings.html
@@ -18,7 +18,10 @@
                     <span class="bar"></span>
                 </div>
                 <ul class="navbar_menu" id="navbar_menu">
-                    <li class="navbar_item"><a href="#" class="navbar_links">HOME</a></li>
+                    <li class="navbar_item"><a href="index.html" class="navbar_links">HOME</a></li>
+                    <li class="navbar_item"><a href="#" class="navbar_links">SUNDAYS</a></li>
+                    <li class="navbar_item"><a href="#" class="navbar_links">FEAST DAYS</a></li>
+                    <li class="navbar_item"><a href="#" class="navbar_links">DAYS OF OBLIGATION</a></li>
                 </ul>
             </nav>
         </div>
