--- a/readings.html
+++ b/readings.html
@@ -26,6 +26,6 @@
             </nav>
         </div>
     </div>
-    <script src="main.js"></script>
+    <script src="readings.js"></script>
 </body>
 </html>
