--- a/index.html
+++ b/index.html
@@ -116,6 +116,20 @@
         #services {
             background-color: #dee2e6;
         }
+        .button {
+            display: inline-block;
+            padding: 10px 20px;
+            background-color: #007bff;
+            color: white;
+            text-decoration: none;
+            border-radius: 5px;
+            font-weight: bold;
+            transition: background-color 0.3s;
+}
+
+.button:hover {
+  background-color: #0056b3;
+}
 
         #portfolio {
             background-color: #ced4da;
@@ -241,6 +255,7 @@
         <h1>Our Services</h1>
         <p>Discover the range of services we offer to our clients and customers.</p>
         <p>Suspendisse in orci enim. Vivamus hendrerit arcu sed erat molestie vehicula. Sed auctor neque eu tellus rhoncus ut eleifend nibh porttitor.</p>
+        <a href="service.html" class="button">Our Services</a>
     </section>
 
     <section id="portfolio">
@@ -286,6 +301,17 @@
                 document.querySelector(this.getAttribute('href')).scrollIntoView({
                     behavior: 'smooth'
                 });
+
+         const button = document.createElement('a');
+    button.href = 'service.html'; // Link to service page
+    button.textContent = 'Our Services';
+    button.className = 'service-button';
+
+    // Append the button to the container
+    const container = document.getElementById('serviceButtonContainer');
+    container.appendChild(button);
+
+        
             });
         });
     </script>
