--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
         <h1>Our Services</h1>
         <p>Discover the range of services we offer to our clients and customers.</p>
         <p>Suspendisse in orci enim. Vivamus hendrerit arcu sed erat molestie vehicula. Sed auctor neque eu tellus rhoncus ut eleifend nibh porttitor.</p>
-        <a href="service.html" class="button">Our Services</a>
+        <a href="readings.html" class="button">Mass readings</a>
     </section>
 
     <section id="portfolio">
