--- a/readings.html
+++ b/readings.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Our Services</title>
-
+    <link rel="stylesheet" href="readings.css">
     <!-- Font Awesome for icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
@@ -124,8 +124,8 @@
         <div style="text-align: center; margin: 50px 0;">
             <a href="index.html" class="btn">Back to Home</a>
         </div>
-    </div>
-
+    </div> 
+    <script src="script.js" defer></script>
 
 </body>
 </html>
