--- a/readings.html
+++ b/readings.html
@@ -4,21 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Our Services</title>
+    <title>READINGS</title>
     <link rel="stylesheet" href="readings.css">
-    <!-- Font Awesome for icons -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
-    <!-- Updated Navbar with Service Categories -->
+    
     <nav>
         <div class="navbar-container">
-            <a href="index.html" class="logo">CreativeStudio</a>
+            <a href="index.html" class="logo">READINGS</a>
             <ul class="nav-links">
-                <li><a href="#web-development">Web Development</a></li>
-                <li><a href="#video-editing">Video Editing</a></li>
-                <li><a href="#photography">Photography</a></li>
-                <li><a href="index.html" class="btn">Back to Home</a></li>
+                <li><a href="#web-development">SUNDAYS</a></li>
+                <li><a href="#video-editing">FEAST DAYS</a></li>
+                <li><a href="#photography">LENT</a></li>
             </ul>
             <div class="hamburger">
                 <div class="line1"></div>
@@ -30,7 +27,7 @@
 
     <!-- Services Hero Section -->
     <section class="services-hero">
-        <h1>Our Professional Services</h1>
+        <h1>SUNDAYS</h1>
         <p>High-quality solutions tailored to your creative needs</p>
     </section>
 
@@ -38,30 +35,16 @@
     <div class="services-container">
         <!-- Web Development Section -->
         <div id="web-development" class="service-category">
-            <h2>Web Development Services</h2>
+            <h2>FEAST DAYS</h2>
             <div class="service-cards">
                 <div class="service-card">
                     <div class="service-icon">
                         <i class="fas fa-code"></i>
                     </div>
-                    <h3>Custom Website Development</h3>
+                    <h3>LENT</h3>
                     <p>Bespoke websites built from scratch to match your unique requirements and brand identity.</p>
                 </div>
-                <div class="service-card">
-                    <div class="service-icon">
-                        <i class="fas fa-shopping-cart"></i>
-                    </div>
-                    <h3>E-Commerce Solutions</h3>
-                    <p>Complete online store setups with payment gateways, inventory management, and more.</p>
-                </div>
-                <div class="service-card">
-                    <div class="service-icon">
-                        <i class="fas fa-mobile-alt"></i>
-                    </div>
-                    <h3>Responsive Design</h3>
-                    <p>Websites that look and function perfectly on all devices from desktops to smartphones.</p>
-                </div>
-            </div>
+                
         </div>
 
         <!-- Video Editing Section -->
