--- a/readings.html
+++ b/readings.html
@@ -44,7 +44,7 @@
                     <h3>LENT</h3>
                     <p>Bespoke websites built from scratch to match your unique requirements and brand identity.</p>
                 </div>
-                
+            </div>
         </div>
 
         <!-- Video Editing Section -->
@@ -112,3 +112,4 @@
 
 </body>
 </html>
+
