--- a/readings.html
+++ b/readings.html
@@ -1,2 +1,197 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Liturgical Readings | BLESSED CARLO ACUTIS PRESS</title>
+    <link rel="stylesheet" href="readings.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+</head>
+<body>
+    <div id="header">
+        <div class="container">
+            <nav class="navbar">
+                <img id="img" src="Images/logo.PNG" alt="BLESSED CARLO ACUTIS PRESS Logo">
+                <div class="hamburger" id="hamburger">
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                </div>
+                <ul class="navbar_menu" id="navbar_menu">
+                    <li class="navbar_item"><a href="#ordinary-time" class="navbar_links">ORDINARY TIME</a></li>
+                    <li class="navbar_item"><a href="#lent" class="navbar_links">LENT</a></li>
+                    <li class="navbar_item"><a href="#advent" class="navbar_links">ADVENT</a></li>
+                    <li class="navbar_item"><a href="#christmas" class="navbar_links">CHRISTMAS</a></li>
+                    <li class="navbar_item"><a href="#easter" class="navbar_links">EASTER</a></li>
+                    <li class="navbar_item"><a href="#saints" class="navbar_links">SAINTS</a></li>
+                </ul>
+            </nav>
+        </div>
+    </div>
 
+    <main>
+        <article class="readings-container">
+            <!-- Ordinary Time Section -->
+            <section id="ordinary-time" class="liturgical-section">
+                <div class="section-header">
+                    <h2>Ordinary Time</h2>
+                    <p>The season of growth and discipleship</p>
+                </div>
+                <div class="cards-container">
+                    <div class="liturgical-card">
+                        <h3>Week 1</h3>
+                        <p>Readings focusing on the call to discipleship</p>
+                        <a href="#" class="btn">View Readings</a>
+                    </div>
+                    <div class="liturgical-card">
+                        <h3>Week 5</h3>
+                        <p>Themes of service and humility</p>
+                        <a href="#" class="btn">View Readings</a>
+                    </div>
+                    <div class="liturgical-card">
+                        <h3>Week 22</h3>
+                        <p>Teachings on the Kingdom of God</p>
+                        <a href="#" class="btn">View Readings</a>
+                    </div>
+                </div>
+            </section>
+
+            <!-- Lent Section -->
+            <section id="lent" class="liturgical-section">
+                <div class="section-header">
+                    <h2>Lent</h2>
+                    <p>Season of repentance and preparation</p>
+                </div>
+                <div class="cards-container">
+                    <div class="liturgical-card">
+                        <h3>Ash Wednesday</h3>
+                        <p>Beginning of the Lenten journey</p>
+                        <a href="#" class="btn">View Readings</a>
+                    </div>
+                    <div class="liturgical-card">
+                        <h3>3rd Sunday</h3>
+                        <p>The Samaritan woman at the well</p>
+                        <a href="#" class="btn">View Readings</a>
+                    </div>
+                    <div class="liturgical-card">
+                        <h3>Holy Week</h3>
+                        <p>Passion narratives and last days of Christ</p>
+                        <a href="#" class="btn">View Readings</a>
+                    </div>
+                </div>
+            </section>
+
+            <!-- Advent Section -->
+            <section id="advent" class="liturgical-section">
+                <div class="section-header">
+                    <h2>Advent</h2>
+                    <p>Preparation for the coming of Christ</p>
+                </div>
+                <div class="cards-container">
+                    <div class="liturgical-card">
+                        <h3>1st Sunday</h3>
+                        <p>Watchfulness for the Lord's coming</p>
+                        <a href="#" class="btn">View Readings</a>
+                    </div>
+                    <div class="liturgical-card">
+                        <h3>Gaudete Sunday</h3>
+                        <p>Rejoice! The Lord is near</p>
+                        <a href="#" class="btn">View Readings</a>
+                    </div>
+                    <div class="liturgical-card">
+                        <h3>O Antiphons</h3>
+                        <p>Ancient prayers for December 17-23</p>
+                        <a href="#" class="btn">View Readings</a>
+                    </div>
+                </div>
+            </section>
+
+            <!-- Christmas Section -->
+            <section id="christmas" class="liturgical-section">
+                <div class="section-header">
+                    <h2>Christmas</h2>
+                    <p>Celebration of the Nativity</p>
+                </div>
+                <div class="cards-container">
+                    <div class="liturgical-card">
+                        <h3>Christmas Vigil</h3>
+                        <p>Readings for Christmas Eve</p>
+                        <a href="#" class="btn">View Readings</a>
+                    </div>
+                    <div class="liturgical-card">
+                        <h3>Christmas Day</h3>
+                        <p>The birth of our Savior</p>
+                        <a href="#" class="btn">View Readings</a>
+                    </div>
+                    <div class="liturgical-card">
+                        <h3>Epiphany</h3>
+                        <p>The manifestation to the Gentiles</p>
+                        <a href="#" class="btn">View Readings</a>
+                    </div>
+                </div>
+            </section>
+
+            <!-- Easter Section -->
+            <section id="easter" class="liturgical-section">
+                <div class="section-header">
+                    <h2>Easter</h2>
+                    <p>Celebration of the Resurrection</p>
+                </div>
+                <div class="cards-container">
+                    <div class="liturgical-card">
+                        <h3>Easter Vigil</h3>
+                        <p>The mother of all vigils</p>
+                        <a href="#" class="btn">View Readings</a>
+                    </div>
+                    <div class="liturgical-card">
+                        <h3>Easter Sunday</h3>
+                        <p>Christ is risen! Alleluia!</p>
+                        <a href="#" class="btn">View Readings</a>
+                    </div>
+                    <div class="liturgical-card">
+                        <h3>Pentecost</h3>
+                        <p>The coming of the Holy Spirit</p>
+                        <a href="#" class="btn">View Readings</a>
+                    </div>
+                </div>
+            </section>
+
+            <!-- Saints Section -->
+            <section id="saints" class="liturgical-section">
+                <div class="section-header">
+                    <h2>Saints Feast Days</h2>
+                    <p>Celebrating the holy men and women of God</p>
+                </div>
+                <div class="cards-container">
+                    <div class="liturgical-card">
+                        <h3>Blessed Carlo Acutis</h3>
+                        <p>October 12 - Patron of our press</p>
+                        <a href="#" class="btn">View Readings</a>
+                    </div>
+                    <div class="liturgical-card">
+                        <h3>St. Therese</h3>
+                        <p>October 1 - The Little Flower</p>
+                        <a href="#" class="btn">View Readings</a>
+                    </div>
+                    <div class="liturgical-card">
+                        <h3>St. Francis</h3>
+                        <p>October 4 - Patron of ecology</p>
+                        <a href="#" class="btn">View Readings</a>
+                    </div>
+                </div>
+            </section>
+        </article>
+    </main>
+
+    <footer class="site-footer">
+        <div class="container">
+            <p>© 2023 BLESSED CARLO ACUTIS PRESS. All rights reserved.</p>
+            <button class="return-home"><a href="index.html">RETURN HOME</a></button>
+        </div>
+    </footer>
+
+    <script src="readings.js"></script>
+</body>
+</html>
